Ajout de la fonctionnalité d'ajout de produit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Gestion de Stock et Produits
 spring.cloud.config.enabled=false
 eureka.client.enabled=false
+server.port=8081
