--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,14 @@
-spring.application.name=Gestion de Stock et Produits
-spring.cloud.config.enabled=false
-eureka.client.enabled=false
+
+# DB Configuration :
+spring.datasource.url=jdbc:mysql://localhost:3306/Stock?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+# Server configuration :
+server.port=8089
+server.servlet.context-path=/stock
+
+# Swagger :
+# http://localhost:8089/kleb/swagger-ui/index.html
