login and signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
 spring.application.name=Gestion de Stock et Produits
 spring.cloud.config.enabled=false
 eureka.client.enabled=false
+server.port=8081
+
+# Configuration de la base H2
+spring.datasource.url=jdbc:h2:file:~/StocketProduits
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Activer la console H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
