--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
-spring.application.name=Gestion de Stock et Produits
+# DB Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/Stock?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+# Server configuration
+server.port=8089
+server.servlet.context-path=/stock
+
+# Désactiver Spring Cloud Config
 spring.cloud.config.enabled=false
-eureka.client.enabled=false
+
+# Swagger (commentaire conservé)
+# http://localhost:8089/stock/swagger-ui/index.html
