--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=wardiaziz2507@gmail.com
+spring.mail.password=fqxi pqmy mbtg sppo
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
