--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
+spring.application.name=Gestion_de_Stock
 
-# DB Configuration :
-spring.datasource.url=jdbc:mysql://localhost:3306/Stock?createDatabaseIfNotExist=true
-spring.datasource.username=root
+server.port=8088
+
+
+# H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+# Datasource
+spring.datasource.username=Ghofrane
 spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:file:./Database/Data/Stock
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto = create
 
-# Server configuration :
-server.port=8089
-server.servlet.context-path=/stock
-
-# Swagger :
-# http://localhost:8089/kleb/swagger-ui/index.html
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
