--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=Gestion de Stock et Produits
+spring.application.name=Gestion_de_User
 spring.cloud.config.enabled=false
-eureka.client.enabled=false
-server.port=8081
+eureka.client.enabled=true
+server.port=8085
 
 # Configuration de la base H2
 spring.datasource.url=jdbc:h2:file:~/StocketProduits
@@ -21,3 +21,6 @@ spring.mail.password=fqxi pqmy mbtg sppo
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
