--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,14 @@ spring.jpa.hibernate.ddl-auto=update
 # Server configuration
 server.port=8089
 server.servlet.context-path=/stock
+spring.application.name=stock-service
+
 
 # Désactiver Spring Cloud Config
 spring.cloud.config.enabled=false
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
 
 # Swagger (commentaire conservé)
 # http://localhost:8089/stock/swagger-ui/index.html
